name:                context-free-grammar
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Gavrilov Pavel
maintainer:          pavelgavrilov19@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lab2
  main-is:             Lab2.hs
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , parsec
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lab3
  main-is:             Lab3.hs
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , mtl
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010